MA-20: implement followButton module

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,9 @@
     <base href="/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://demo.productionready.io/main.css" rel="stylesheet" type="text/css" />
     <link
-      href="http://demo.productionready.io/main.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
     />
