--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <title>Medium-Ng</title>
-    <base href="/medium-ng/">
+    <base href="./">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://demo.productionready.io/main.css" rel="stylesheet" type="text/css">
