--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <base href="/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/brain-ico.png" />
     <link href="https://demo.productionready.io/main.css" rel="stylesheet" type="text/css" />
     <link
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
